tests/paczka1/small_fuzzy/93120144.err
Error in line 1: CwDCC9s6BJ S118 95,6
Error in line 6: S205 S118 67,9
Error in line 7: S205 S972 79,1
Error in line 4: bJFEw S205 84,5
Error in line 10: S205 S205 1,2
